Fixed everything, that was requested to change. In next branch I create, will fix navigation bar appearing behind on signin page.

--- a/WareMaster/Assets/Styles/mainNavBar.css
+++ b/WareMaster/Assets/Styles/mainNavBar.css
@@ -33,6 +33,7 @@ header .logo-container{
     margin: auto;
     box-shadow: 0 0 2px white;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .logo-container .app-title{
